correct layout of container

--- a/style.css
+++ b/style.css
@@ -174,7 +174,6 @@
  }
 
  .container {
-   height: 100vh;
    width: 100%;
    overflow: hidden;
    margin-top: 68px;
@@ -182,13 +181,13 @@
 
  .sidebar {
    width: 17%;
-   height: 100vh;
+   height: 100%;
    position: fixed;
    left: 0;
    background-color: #0f0f0f;
    padding: 10px 0;
    overflow-y: auto;
-   padding-bottom: 1rem;
+   padding-bottom: 5rem;
  }
 
  .sidebar span {
@@ -244,7 +243,6 @@
    width: 83%;
    margin-left: 262px;
    background-color: #0F0F0F;
-   height: 100vh;
    overflow: auto;
    flex-direction: column;
    padding: 2px 1rem 2rem 1rem;
@@ -263,15 +261,14 @@
  .content .buttons-1 {
    display: flex;
    gap: 20px;
+   padding: 8px 12px;
    width: 40px;
    background-color: #ffffff;
    border: none;
    color: #000000;
    border-radius: 10px;
    margin-right: 5px;
-   align-items: end;
    justify-content: center;
-   padding: 8px 16px;
    font-size: 14px;
    font-weight: 500;
    cursor: pointer;
@@ -308,7 +305,7 @@
    gap: 1rem;
    object-fit: cover;
    flex-wrap: wrap;
-   margin-top: 70px;
+   margin-top: 55px;
    margin-bottom: 10px;
    column-gap: 15px;
    row-gap: 40px;
